# kernel.os-joy.com

./: .env.example  .gitignore  README.md  config.py  db.py  deploy.sh  docker-compose.yml  dtos.py  email_client.py  execution.py  identity.py  intake.py  main.py  missive.py  persona.py  protocol.py  push.py  pyproject.toml  rate_limit.py  worker.py
core/: config.py  db.py  dtos.py  logs.py  protocol.py  rate_limit.py
deploy/: kernel-os-joy.service
doc/: architecture.md  authentication.md  context-engineering.md  google-integration.md  llms.md  notifications.md  observability.md  tool-calling.md
doc/tool-calling/: reminders.md
migrations/: 0001_identity.sql  0002_intake.sql  0003_push.sql  0004_missive.sql  0005_reply_channel_symbiot.sql  0006_intake_delivered.sql  0007_intake_symbiot.sql  0008_intake_immutable.sql  0009_pgvector.sql  0010_ontology_store.sql  0011_diary_fact_times.sql  0012_read_path_indexes.sql  0013_diary_fact_intake_provenance.sql  0014_conversation_memory.sql  0015_enrichment_provenance.sql  0016_symbiot_timezone.sql  0017_tools_and_reminders.sql  0018_notifications.sql  0019_model_config.sql  0020_symbiot_presence.sql  0021_enrichment_echo_suppressed.sql
persona/: public.md
scripts/: backfill_conversation_stream.py
services/: conversation.py  deep_retrieval.py  echo.py  embedding.py  enrichment.py  execution.py  identity.py  intake.py  llm.py  missive.py  models.py  observe.py  ontology.py  ontology_gc.py  persona.py  push.py  reply.py  retrieval.py  worker.py  zone.py
test/: conftest.py  test_compression.py  test_conversation.py  test_deep_retrieval.py  test_enrichment.py  test_execution.py  test_identity.py  test_inbox.py  test_ingestion.py  test_intake.py  test_llm.py  test_model_config.py  test_models.py  test_notifications.py  test_notify.py  test_observe.py  test_ontology.py  test_ontology_gc.py  test_persona.py  test_presence.py  test_push.py  test_rate_limit.py  test_reminder.py  test_reply.py  test_retrieval.py  test_tools.py  test_worker.py  test_zone.py
(+30 files in other folders)
