[project]
name = "kernel-os-joy"
version = "0.0.1"
description = "The kernel — the privileged core behind kernel.os-joy.com."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "google-api-python-client>=2.198.0",
    "google-auth>=2.55.1",
    "mistralai>=2.6.0",
    "ollama>=0.6.2",
    "openai>=2.45.0",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "pywebpush>=2.3.0",
    "tiktoken>=0.8.0",
    # Ship our own IANA timezone database rather than trusting the OS to carry one.
    # zoneinfo falls back to /usr/share/zoneinfo, which a lean server image may not have —
    # and when it is missing, ZoneInfo(zone) raises and services.zone.now_for silently returns UTC,
    # so the symbiot's clock reads correct-looking but wrong. Carrying tzdata in the venv makes the
    # local "now" independent of the OS image, on the box and on every developer's machine alike.
    "tzdata>=2026.2",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
# Tests live in test/ and import main plus the kernel's packages (core, services),
# so the repo root must be importable.
testpaths = ["test"]
pythonpath = ["."]
